# Teste_Albert_Einstein

./: 404.html  LICENSE  README.md  index.html
.devcontainer/: devcontainer.json
arquivos_dml/: municipios_DML.sql
banco_de_dados/: index.html
code/: README.md  env-example  pyproject.toml  requirements.txt
code/src/: insert_municipios.py  main.py  mkdocs.yml
code/src/database/: db.py  models.py
code/src/docs/: banco_de_dados.md  configuracao.md  etl.md  frontend.md  index.md  visao_geral.md
code/src/extract/: csv_cleaner.py  generic_csv_extracter.py
code/src/frontend/: app.py
code/src/transform/: data_cleaner.py  disease_table.py  district_table.py
configuracao/: index.html
etl/: index.html
frontend/: index.html
search/: search_index.json
views/: vw_municipios_com_10_ou_mais_casos.sql
visao_geral/: index.html
